--- a/public/index.html
+++ b/public/index.html
@@ -2,401 +2,229 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Jagan's Bot</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jagan AI Chatbot</title>
+
   <style>
-    /* Reset */
-    *, *::before, *::after {
+    * {
       box-sizing: border-box;
       margin: 0;
-      padding: 0; 
-    }
-
-    /* CSS Variables */
-    :root {
-      --bg: #020617;
-      --surface: #020617;
-      --surface-soft: #020617;
-      --border-subtle: #1f2937;
-      --accent: #3b82f6;
-      --accent-soft: rgba(37, 99, 235, 0.12);
-      --text-main: #e5e7eb;
-      --text-muted: #6b7280;
-      --you-bubble: #2563eb;
-      --ai-bubble: #111827;
-    }
-
-    body.light-mode {
-      --bg: #6089dd;
-      --surface: #eaf0f0;
-      --surface-soft: #a8b1f5;
-      --border-subtle: #e5e7eb;
-      --accent: #2563eb;
-      --accent-soft: rgba(37, 99, 235, 0.08);
-      --text-main: #111827;
-      --text-muted: #9ca3af;
-      --you-bubble: #2563eb;
-      --ai-bubble: #f3f4f6;
-    }
-
-    /* Global */
-    html, body {
-      height: 100%;
-      margin: 0;
+      padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
-        "Segoe UI", sans-serif;
-      background-color: var(--bg);
-      color: var(--text-main);
+      height: 100vh;
+      background:linear-gradient(rgb(248, 48, 48),rgb(54, 54, 217));
       display: flex;
-      align-items: stretch;
       justify-content: center;
-      padding: 0;
-      transition: background-color 0.3s ease, color 0.2s ease;
+      align-items: center;
     }
 
-    /* Chat container - Full height on mobile */
+    /* Chat Container */
     #chat {
       width: 100%;
       max-width: 420px;
-      height: 100%;
-      background-color: var(--surface);
-      border-radius: 18px;
-      border: 1px solid var(--border-subtle);
+      height: 85vh;
+      background: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
       display: flex;
       flex-direction: column;
       overflow: hidden;
-    }
-
-    /* Desktop styles */
-    @media (min-width: 640px) {
-      body {
-        padding: 16px;
-        align-items: center;
-      }
-      #chat {
-        height: 80vh;
-        max-height: 680px;
-        border-radius: 18px;
-      }
+      transition: background 0.3s;
     }
 
     /* Header */
-    #chat > header {
+    #chat h2 {
+      padding: 14px;
+      background: #2563eb;
+      color: white;
+      font-size: 18px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      gap: 8px;
-      padding: 12px 14px;
-      border-bottom: 1px solid var(--border-subtle);
-      background-color: var(--surface-soft);
-    }
-
-    .title-wrap {
-      display: flex;
-      flex-direction: column;
-      gap: 2px;
-    }
-
-    .title-wrap span:nth-child(1) {
-      font-size: 0.78rem;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-      color: var(--accent);
-      font-weight: 600;
-    }
-
-    .title-wrap span:nth-child(2) {
-      font-size: 0.98rem;
-      font-weight: 600;
-    }
-
-    .title-wrap span:nth-child(3) {
-      font-size: 0.75rem;
-      color: var(--text-muted);
-    }
-
-    /* Theme toggle */
-    #theme-toggle {
-      border: 1px solid var(--border-subtle);
-      background-color: var(--surface);
-      border-radius: 999px;
-      width: 50px;
-      height: 26px;
-      display: inline-flex;
       align-items: center;
-      justify-content: space-between;
-      padding: 0 4px;
+    }
+
+    #themeToggle {
+      background: transparent;
+      border: none;
+      color: white;
+      font-size: 18px;
       cursor: pointer;
-      position: relative;
-      transition:
-        background-color 0.2s ease,
-        border-color 0.2s ease,
-        box-shadow 0.2s ease;
-    }
-
-    #theme-toggle:hover {
-      box-shadow: 0 0 0 1px var(--accent-soft);
-    }
-
-    #theme-toggle svg {
-      width: 14px;
-      height: 14px;
-    }
-
-    .sun-icon circle,
-    .sun-icon line {
-      stroke: #facc15;
-      stroke-width: 1.5;
-      fill: none;
-    }
-
-    .moon-icon path {
-      fill: #e5e7eb;
-    }
-
-    .sun-icon, .moon-icon {
-      transition: opacity 0.2s ease, transform 0.2s ease;
-    }
-
-    #theme-toggle::after {
-      content: "";
-      position: absolute;
-      top: 3px;
-      left: 3px;
-      width: 20px;
-      height: 20px;
-      border-radius: 999px;
-      background-color: #f9fafb;
-      transition: transform 0.2s ease, background-color 0.2s ease;
-    }
-
-    body.dark-mode .sun-icon {
-      opacity: 1;
-      transform: translateX(0);
-    }
-    body.dark-mode .moon-icon {
-      opacity: 0;
-      transform: translateX(6px);
-    }
-
-    body.light-mode .sun-icon {
-      opacity: 0;
-      transform: translateX(-6px);
-    }
-    body.light-mode .moon-icon {
-      opacity: 1;
-      transform: translateX(0);
-    }
-
-    body.light-mode #theme-toggle::after {
-      transform: translateX(22px);
-      background-color: #111827;
     }
 
     /* Messages */
     #messages {
       flex: 1;
-      padding: 12px 10px;
+      padding: 12px;
       overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      scroll-behavior: smooth;
-      scrollbar-width: thin;
-      scrollbar-color: var(--border-subtle) transparent;
-    }
-
-    #messages::-webkit-scrollbar {
-      width: 6px;
-    }
-    #messages::-webkit-scrollbar-thumb {
-      background-color: var(--border-subtle);
-      border-radius: 999px;
+      background: #f9fafb;
     }
 
     .msg {
+      margin-bottom: 10px;
+      padding: 8px 10px;
       max-width: 75%;
-      font-size: 0.88rem;
+      border-radius: 8px;
+      font-size: 14px;
       line-height: 1.4;
-      padding: 7px 10px;
-      border-radius: 14px;
       word-wrap: break-word;
     }
 
-    .msg.you {
+    .you {
+      background: #dbeafe;
+      color: #1e3a8a;
       margin-left: auto;
-      background-color: var(--you-bubble);
-      color: #eff6ff;
-      border-bottom-right-radius: 4px;
+      border-bottom-right-radius: 2px;
     }
 
-    .msg.ai {
+    .ai {
+      background: #e5e7eb;
+      color: #111827;
       margin-right: auto;
-      background-color: var(--ai-bubble);
-      color: var(--text-main);
-      border-bottom-left-radius: 4px;
-      border: 1px solid var(--border-subtle);
+      border-bottom-left-radius: 2px;
     }
 
-    /* Input area - Fixed at bottom */
+    /* Input Box */
     .input-box {
-      border-top: 1px solid var(--border-subtle);
-      background-color: var(--surface-soft);
-      padding: 8px 10px;
       display: flex;
-      align-items: center;
       gap: 8px;
-      flex-shrink: 0;
+      padding: 10px;
+      border-top: 1px solid #ddd;
+      background: white;
     }
 
-    .input-box input {
+    #input {
       flex: 1;
-      border-radius: 999px;
-      border: 1px solid var(--border-subtle);
-      padding: 8px 11px;
-      font-size: 0.88rem;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 14px;
       outline: none;
-      background-color: var(--surface);
-      color: var(--text-main);
-      transition:
-        border-color 0.18s ease,
-        box-shadow 0.18s ease,
-        background-color 0.18s ease;
     }
 
-    .input-box input::placeholder {
-      color: var(--text-muted);
+    #input:focus {
+      border-color: #2563eb;
     }
 
-    .input-box input:focus {
-      border-color: var(--accent);
-      box-shadow: 0 0 0 1px var(--accent-soft);
-    }
-
-    .input-box button {
-      border-radius: 999px;
+    button.send {
+      padding: 10px 14px;
+      background: #2563eb;
+      color: white;
       border: none;
-      padding: 8px 14px;
-      font-size: 0.78rem;
-      text-transform: uppercase;
-      letter-spacing: 0.08em;
-      background-color: var(--accent);
-      color: #eff6ff;
-      font-weight: 600;
+      border-radius: 6px;
       cursor: pointer;
-      transition:
-        background-color 0.18s ease,
-        transform 0.08s ease,
-        box-shadow 0.18s ease;
-      box-shadow: 0 3px 8px rgba(15, 23, 42, 0.4);
     }
 
-    .input-box button:hover {
-      background-color: #1d4ed8;
-      box-shadow: 0 4px 10px rgba(15, 23, 42, 0.5);
+    button.send:hover {
+      background: #1d4ed8;
     }
 
-    .input-box button:active {
-      transform: translateY(1px);
-      box-shadow: 0 2px 5px rgba(15, 23, 42, 0.6);
+    /* 🌙 Dark Mode ONLY for Chat Container */
+    #chat.dark {
+      background: #111827;
+    }
+
+    #chat.dark h2 {
+      background: #020617;
+    }
+
+    #chat.dark #messages {
+      background: #1f2933;
+    }
+
+    #chat.dark .ai {
+      background: #374151;
+      color: #f9fafb;
+    }
+
+    #chat.dark .you {
+      background: #1d4ed8;
+      color: white;
+    }
+
+    #chat.dark .input-box {
+      background: #020617;
+      border-color: #374151;
+    }
+
+    #chat.dark input {
+      background: #020617;
+      color: white;
+      border: 1px solid #374151;
+    }
+
+    #chat.dark button.send {
+      background: #2563eb;
+    }
+
+    /* Mobile Responsive */
+    @media (max-width: 480px) {
+      #chat {
+        height: 100vh;
+        border-radius: 0;
+      }
     }
   </style>
 </head>
 
-<body class="light-mode">
-  <div id="chat">
-    <header>
-      <div class="title-wrap">
-        <span style="color:rgb(48, 56, 208)">Jagan's Bot</span>
-      </div>
+<body>
 
-      <button id="theme-toggle" aria-label="Toggle theme">
-        <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <circle cx="12" cy="12" r="5" />
-          <line x1="12" y1="1" x2="12" y2="3" />
-          <line x1="12" y1="21" x2="12" y2="23" />
-          <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
-          <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
-          <line x1="1" y1="12" x2="3" y2="12" />
-          <line x1="21" y1="12" x2="23" y2="12" />
-          <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
-          <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
-        </svg>
-        <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
-        </svg>
-      </button>
-    </header>
+  <div id="chat">
+    <h2>
+      Jagan's Bot
+      <button id="themeToggle">🌙</button>
+    </h2>
 
     <div id="messages"></div>
 
     <div class="input-box">
       <input id="input" placeholder="Type a message..." />
-      <button onclick="send()">Send</button>
+      <button class="send" onclick="send()">Send</button>
     </div>
   </div>
 
-  <!-- Socket.io (only works if your backend serves /socket.io/socket.io.js) -->
+  <!-- Socket.IO -->
   <script src="/socket.io/socket.io.js"></script>
+
   <script>
-    const socket = typeof io !== "undefined" ? io() : null;
+    const socket = io();
     const messages = document.getElementById("messages");
     const input = document.getElementById("input");
+    const toggleBtn = document.getElementById("themeToggle");
+    const chatBox = document.getElementById("chat");
 
     function send() {
       if (!input.value.trim()) return;
-
       const userMsg = document.createElement("div");
       userMsg.className = "msg you";
       userMsg.innerText = input.value;
       messages.appendChild(userMsg);
 
-      if (socket) {
-        socket.emit("chat message", input.value);
-      }
-
+      socket.emit("chat message", input.value);
       input.value = "";
       messages.scrollTop = messages.scrollHeight;
     }
 
-    if (socket) {
-      socket.on("chat message", (msg) => {
-        const aiMsg = document.createElement("div");
-        aiMsg.className = "msg ai";
-        aiMsg.innerText = msg;
-        messages.appendChild(aiMsg);
-        messages.scrollTop = messages.scrollHeight;
-      });
-    }
+    socket.on("chat message", (msg) => {
+      const aiMsg = document.createElement("div");
+      aiMsg.className = "msg ai";
+      aiMsg.innerText = msg;
+      messages.appendChild(aiMsg);
+      messages.scrollTop = messages.scrollHeight;
+    });
 
     input.addEventListener("keydown", (e) => {
       if (e.key === "Enter") send();
     });
 
-    // Theme toggle - Default light mode
-    const themeToggle = document.getElementById("theme-toggle");
-    const body = document.body;
-
-    // Load saved theme or default to light-mode
-    const savedTheme = localStorage.getItem("theme");
-    const currentTheme = savedTheme || "light-mode";
-    body.classList.add(currentTheme);
-
-    themeToggle.addEventListener("click", (e) => {
-      e.stopPropagation();
-      if (body.classList.contains("dark-mode")) {
-        body.classList.remove("dark-mode");
-        body.classList.add("light-mode");
-        localStorage.setItem("theme", "light-mode");
-      } else {
-        body.classList.remove("light-mode");
-        body.classList.add("dark-mode");
-        localStorage.setItem("theme", "dark-mode");
-      }
+    /* Dark mode toggle */
+    toggleBtn.addEventListener("click", () => {
+      chatBox.classList.toggle("dark");
+      toggleBtn.textContent = chatBox.classList.contains("dark") ? "☀️" : "🌙";
     });
   </script>
+
 </body>
 </html>
