--- a/public/index.html
+++ b/public/index.html
@@ -13,27 +13,28 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    body {
-      height: 100vh;
-      background:linear-gradient(rgb(248, 48, 48),rgb(54, 54, 217));
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+body {
+  min-height: 100dvh;
+  background: linear-gradient(rgb(248, 48, 48), rgb(54, 54, 217));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
 
-    /* Chat Container */
-    #chat {
-      width: 100%;
-      max-width: 420px;
-      height: 60vh;
-      background: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.12);
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-      transition: background 0.3s;
-    }
+
+#chat {
+  width: 100%;
+  max-width: 420px;
+  min-height: 60dvh;
+  max-height: 90dvh;
+  background: #ffffff;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
 
     /* Header */
     #chat h2 {
@@ -93,6 +94,8 @@
       padding: 10px;
       border-top: 1px solid #ddd;
       background: white;
+  flex-shrink: 0;
+      
     }
 
     #input {
@@ -159,13 +162,19 @@
       background: #2563eb;
     }
 
-    /* Mobile Responsive */
-    @media (max-width: 480px) {
-      #chat {
-        height: 100vh;
-        border-radius: 0;
-      }
-    }
+@media (max-width: 480px) {
+  body {
+    align-items: stretch;
+  }
+
+  #chat {
+    max-width: 100%;
+    min-height: 100dvh;
+    max-height: 100dvh;
+    border-radius: 0;
+  }
+}
+
   </style>
 </head>
 
